--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,7 @@
 {
   "ConnectionStrings": {
-    "LibraryConnection": "Server=(localdb)\\MSSQLLocalDB;Database=LibraryDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LibraryConnection": ""
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "Jwt": { "Key": "" },
+  "Email": { "SmtpUser": "", "SmtpPass": "" }
 }
