--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,18 @@
   "ConnectionStrings": {
     "LibraryConnection": ""
   },
-  "Jwt": { "Key": "" },
-  "Email": { "SmtpUser": "", "SmtpPass": "" }
+  "Jwt": {
+    "Key": ""
+  },
+  "Email": {
+    "SmtpUser": "",
+    "SmtpPass": ""
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
